@@ -1,8 +1,12 @@
 debhelper (12.7.4) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Dh_Lib.pm: Simplify internal loggning of which commands
     have been run.  We are no longer interested in whether
     it was an override target or not.
+
+  [ Helmut Grohne ]
+  * Warn about missing perl-xs-dev for perl_* buildsystems.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 15 Jan 2020 21:04:25 +0000
 
